--- a/content/posts/coding-with-llms.mdx
+++ b/content/posts/coding-with-llms.mdx
@@ -49,7 +49,7 @@ That said, this doesn't mean you can't be effective with AI and domain-specific 
 
 If the code you're writing for your domain has a lot of similar code available online, chances are an AI model will write good code for you without much work.
 
-Web development, relatively boring backend development, mobile development, library development, and "CNCF-adjacent" cloud development (i.e., written in Go and deployed to kubernetes), are some domains that I've found AI models do well with. This is mostly due to the vast amount of this sort of code available that modern AI models pre-train on.
+Web development, relatively boring backend development, mobile development, library development, and "[CNCF](https://www.cncf.io/)-adjacent" cloud development (i.e., written in Go and deployed to kubernetes), are some domains that I've found AI models do well with. This is mostly due to the vast amount of this sort of code available that modern AI models pre-train on.
 
 ### Rapid feedback cycles
 
