--- a/content/posts/coding-with-llms.mdx
+++ b/content/posts/coding-with-llms.mdx
@@ -159,7 +159,7 @@ This is especially true for using AI for real-world coding instead of tiny littl
 
 I usually start by creating an instruction/rules file or "project" in the AI tool I'm using. In Claude or ChatGPT, this is literally called "projects", and these are a way to provide a bunch of files that make the model produce significantly better code. [Cursor](https://docs.cursor.com/context/rules-for-ai) and [Copilot](https://copilot-instructions.md/) support custom instructions in various ways too.
 
-Note that depending on your tool, it's not just text files that are supported, but also images. I've found that images are particularly useful for showing things like architecture diagrams or screenshots of a working app to contextualize how the code makes something work. You can also provide custom documents that reference other documents, such as a file that explains the names of several screenhots and how they relate to the codebase. Things like Claude Projects will pick this up.
+Note that depending on your tool, it's not just written text files that are supported, but also digrams. I've found that diagrams are particularly useful for showing things like architecture or general flows of a working app to contextualize how the code makes something work. You can also provide custom documents that reference other documents, such as a file that explains the names of several screenhots and how they relate to the codebase. Things like Claude Projects will pick this up.
 
 If you're not using a tool that supports this sort of thing, you can even get by with simply pasting in a single file -- preferably following the [llms.txt standard](https://llmstxt.org/) -- and your single chat session will produce _shockingly_ better code.
 
