--- a/content/posts/coding-with-llms.mdx
+++ b/content/posts/coding-with-llms.mdx
@@ -2,7 +2,7 @@
 title: How I code with LLMs these days
 description: Practical tips for developers looking to use AI coding assistants
 date: "2025-01-31"
-tags: ai, development
+tags: llms, devex
 ---
 
 I first started using AI coding assistants in early 2021, with an invite code from a friend who worked on the original GitHub Copilot team. Back then the workflow was just single-line tab completion, but you could also guide code generation with comments and it'd try its best to implement what you want.
