--- a/content/posts/llms-computers.mdx
+++ b/content/posts/llms-computers.mdx
@@ -24,11 +24,11 @@ But that can't be it, right? Surely there's more to this, because computers and 
 
 - Have applications that run on them
 - Run on specialized hardware depending on their purpose
-- Are programmable with diffrent kinds of instructions
+- Are programmable with different kinds of instructions
 - Are general purpose (but also can be a specialized variant)
 - Can interact with and control other systems as tools for a job
 
-ChatGPT also fits this criteria. Custom GPTs are already applications, and the models that power ChatGPT have APIs that are in use by countless companies and their applications. ChatGPT runs on specialized hardware. It's programmable via all kinds of fascinating prompt engineering techniques. It's general purpose, meaning I can use it to ask about the meaning of a piece of prose as equally as I can ask it to turn a set of instructions and some data into a JSON object. And with tools like internet search, calculators, the ability to execute python code, and the [general-purpose actions capability](https://platform.openai.com/docs/actions/introduction), it can interact with and control other systems.
+ChatGPT also fits these criteria. Custom GPTs are already applications, and the models that power ChatGPT have APIs that are in use by countless companies and their applications. ChatGPT runs on specialized hardware. It's programmable via all kinds of fascinating prompt engineering techniques. It's general purpose, meaning I can use it to ask about the meaning of a piece of prose as equally as I can ask it to turn a set of instructions and some data into a JSON object. And with tools like internet search, calculators, the ability to execute python code, and the [general-purpose actions capability](https://platform.openai.com/docs/actions/introduction), it can interact with and control other systems.
 
 ### This definition feels weird
 
@@ -103,7 +103,7 @@ In 2024, not only did [LLMs get much faster to run](./llm-training-efficiency.md
 - Ask ChatGPT to generate a picture in a particular art style
 - Talk to ChatGPT or other assistants that support voice inputs and outputs
 - Combine real-time video and audio feeds
-- Combine text, 
+- Combine all of the above as inputs and outputs
 
 In a sense, LLM meaning Large Language Model is a bit of a misnomer, because the computer systems we interact with do more than just process language. But the name has stuck, so it's the term we use.
 
@@ -122,7 +122,7 @@ I do not believe in the short-term that LLMs and AI will be:
 
 As a daily user of this tech for real work tasks, I can tell you with confidence that it's powerful, but very hard to use effectively and we're in the very early days of this stuff. We're living in the equivalent of the 1970s for PCs.
 
-There's even some signs that another large step change like what ChatGPT brought us in 2023 is going to be [a big challenge](https://observer.com/2024/12/openai-cofounder-ilya-sutskever-ai-data-peak/). We don't really know where the upper limit is, nor what it means to take a meaningful enough next step up. I believe there will be more step changes, but that's ultimatley just a belief.
+There's even some signs that another large step change like what ChatGPT brought us in 2023 is going to be [a big challenge](https://observer.com/2024/12/openai-cofounder-ilya-sutskever-ai-data-peak/). We don't really know where the upper limit is, nor what it means to take a meaningful enough next step up. I believe there will be more step changes, but that's ultimateley just a belief.
 
 That said, I do think that a few decades from now, several things will be radically different:
 
