--- a/content/posts/llms-computers.mdx
+++ b/content/posts/llms-computers.mdx
@@ -92,7 +92,7 @@ Knowing it will only last a few minutes encourages mindfulness and appreciation 
 In essence, a sunset's beauty lies in both the physics of light and our emotional connection to the experience. 🌅
 ```
 
-This inversion is really weird. We've spent decades working with computers that are incredible at precision tasks but need to be painstakingly programmed for anything remotely fuzzy. Now we have computers that are adept at fuzzy tasks but need special handling for precision work.
+This inversion is really weird. We've spent decades working with computers that are incredible at precision tasks but need to be painstakingly programmed for anything remotely fuzzy. Now we have computers that are adept at fuzzy tasks but need special handling for precision work. I genuinely do not know what to make of this yet!
 
 ## LLMs aren't just about text anymore
 
