--- a/content/posts/llms-computers.mdx
+++ b/content/posts/llms-computers.mdx
@@ -117,7 +117,7 @@ I do not believe in the short-term that LLMs and AI will be:
 
 - An effective replacement for knowledge workers in the next few years
 - The end of SaaS businesses
-- Capable of generating media that people like
+- Capable of generating media that wide swaths of people genuinely enjoy
 - Able to intrinsically overcome laws of physics and constraints of human systems and preferences
 
 As a daily user of this tech for real work tasks, I can tell you with confidence that it's powerful, but very hard to use effectively and we're in the very early days of this stuff. We're living in the equivalent of the 1970s for PCs.
