--- a/content/posts/llms-computers.mdx
+++ b/content/posts/llms-computers.mdx
@@ -120,7 +120,7 @@ I do not believe in the short-term that LLMs and AI will be:
 - Capable of generating media that wide swaths of people genuinely enjoy
 - Able to intrinsically overcome laws of physics and constraints of human systems and preferences
 
-As a daily user of this tech for real work tasks, I can tell you with confidence that it's powerful, but very hard to use effectively and we're in the very early days of this stuff. We're living in the equivalent of the 1970s for PCs.
+As a daily user of this tech for real work tasks, I can tell you with confidence that it's powerful, but very hard to use effectively and we're in the very early days of this stuff. We're living in the equivalent of the 1970s for PCs, not the 2020s.
 
 There's even some signs that another large step change like what ChatGPT brought us in 2023 is going to be [a big challenge](https://observer.com/2024/12/openai-cofounder-ilya-sutskever-ai-data-peak/). We don't really know where the upper limit is, nor what it means to take a meaningful enough next step up. I believe there will be more step changes, but that's ultimateley just a belief.
 
