--- a/content/posts/llms-computers.mdx
+++ b/content/posts/llms-computers.mdx
@@ -43,7 +43,7 @@ If traditional computers are precision machines that struggle with fuzziness, LL
 Imagine two tasks:
 
 1. Successively multiplying larger and larger numbers together
-2. Calculating the meaning of a phrase
+2. Calculating the understanding of a phrase
 
 Traditional computer:
 
@@ -51,8 +51,8 @@ Traditional computer:
 > python run mul.py
 12324842551279 (calculated instantly and perfectly)
 
-> python run meaning.py
-The meaning of the phrase "Explain what makes the sunset beautiful?" is:
+> python run understanding.py
+The understanding of the phrase "Explain what makes the sunset beautiful?" is:
 "TODO implement something, idk, this is impossible without machine learning"
 ```
 
@@ -96,7 +96,7 @@ This inversion is really weird. We've spent decades working with computers that 
 
 ## LLMs aren't just about text anymore
 
-In 2024, not only did [LLMs get much faster to run](./llm-training-efficiency.mdx), but multi-modality went mainstream. Now you can do things like:
+In 2024, not only did [LLMs get much faster to run](./llm-training-efficiency), but multi-modality went mainstream. Now you can do things like:
 
 - Upload a picture of food and ask ChatGPT to give you a range of calories as an estimate
 - Use a coding assistant, paste in a picture of the UI doing something weird, and ask it to fix it in a particular way
