--- a/content/posts/goodbye-microsoft-hello-honeycomb.mdx
+++ b/content/posts/goodbye-microsoft-hello-honeycomb.mdx
@@ -1,9 +1,9 @@
 
 ---
-title: When the readability of Go falls off a cliff
-description: My take on how "Go is readable" doesn't mean much to me.
+title: Goodbye Microsoft, Hello Honeycomb
+description: My departure message to the F# community
 date: "2021-06-07"
-tags: golang, devex
+tags: fsharp, dotnet
 ---
 
 Well, I’m leaving Microsoft after nearly 6 years. I’ll take a short bit of time off before my next job. I’m going to be joining the fine folks at [Honeycomb](https://www.honeycomb.io/) to help contribute towards building an even better developer experience (and perhaps a bunch of other stuff too).
