--- a/content/posts/llms-as-search-engines.mdx
+++ b/content/posts/llms-as-search-engines.mdx
@@ -1,6 +1,6 @@
 ---
 title: Using LLMs as a search engine
-description: A quick framing on how LLMs are search engines
+description: A quick perspective on using LLMs assearch engines
 date: "2025-05-03"
 tags: llms, data, search
 ---
