--- a/content/posts/llms-as-search-engines.mdx
+++ b/content/posts/llms-as-search-engines.mdx
@@ -23,9 +23,11 @@ This is a very important nuance to understand! The OP's profession is that of an
 
 Moreover, I doubt that the OP — a writer — is intentionally trying to keep up with all the technical capabilities that LLMs have today, which is itself a target that moves so fast that most computer programmers aren't even up to speed with the latest capabilities. Yes, she is incorrect in making the claim that systems like ChatGPT "[cannot] scan the web for information". But that's not the point she's making!
 
-Additionally, a lot of computer dorks (like me) tend to be very literal-minded, and we're not always great at understanding the social context of someone's bluesky post that they spent all of a minute writing. And so a horde of people decided to rush in and correct her false statements about searching capabilities without actually understanding the point she was trying to make in the first place.
+Additionally, a lot of computer dorks like me tend to be very literal-minded, and we're not always great at understanding the social context of someone's posting. And so a horde of computer dorks decided to rush in and correct her false statements about searching capabilities without actually understanding the point she was trying to make in the first place. This is unproductive and unhelpful and comes off as dismissive of the actual, real points being made by people who have expertise outside of computers.
 
-Turns out people are complicated.
+On the other side of things, the tech dorks often do have a point! People don't have the correct perspective just because they work in a field that isn't tech, although some of bluesky would have you think otherwise. LLMs represent the introduction of a new kind of computing, and it's going to be disruptive in ways we can't predict. The computer dorks who like this tech for the right reasonsare worth having on your side too.
+
+Turns out people are complicated. Let's all be kinder to one another. Okay, moving on.
 
 ## Understanding how LLMs contain data
 
