--- a/content/posts/llms-as-search-engines.mdx
+++ b/content/posts/llms-as-search-engines.mdx
@@ -49,7 +49,7 @@ Additionally, recent [advanced models](https://openai.com/index/introducing-o3-a
 
 Finally, ChatGPT also supports [deep research](https://openai.com/index/introducing-deep-research/), which sends an AI agent off on a comprehensive search of the web, where it will search and scan hundreds (or potentially thousands) of sources on the web prior to giving an answer.
 
-**What this means in practice is that ChatGPT is an advanced computing system**, and arguably very much a search engine.
+**What this means in practice is that ChatGPT is an advanced computing system**, and arguably very much a search engine by any reasonable definition of the term.
 
 ## Why ChatGPT as a search engine is useful
 
