--- a/content/posts/llms-as-search-engines.mdx
+++ b/content/posts/llms-as-search-engines.mdx
@@ -55,7 +55,7 @@ Finally, ChatGPT also supports [deep research](https://openai.com/index/introduc
 
 Search is a hard, hard, hard problem. There's a reason why Google has been trying to improve search systems since their inception. I would argue it's even inherently unsolvable, insofar as there's no generic way to always provide the most relevant results for any arbitrary query.
 
-But the superpower that LLMs provide — and why Google created them in the first place — is that they do a phenomenal job of estimating the _intent_ behind an arbitrarily complex query. This has always been a problem with Google in the past, and why "googling as a skill" is a thing, because some folks have learned very particular tricks to get better results, but most of these tricks aren't known by the average person. **LLMs solve this problem for the average person**.
+The superpower that LLMs provide — and why Google created them in the first place — is that they do a phenomenal job of estimating the _intent_ behind an arbitrarily complex query, thereby allowing a user to express their query in a way that is most natural to them. This has always been a problem with Google in the past, and why "googling as a skill" is a thing, because some folks have learned very particular tricks to get better results, but most of these tricks aren't known by the average person. **LLMs solve this problem for the average person**.
 
 This, alone, is an extremely powerful capability and a legitimate advancement in computing, and it doesn't even begin to touch on the capabilities of how LLMs can be tuned towards responding in specific ways.
 
