--- a/content/posts/llms-as-search-engines.mdx
+++ b/content/posts/llms-as-search-engines.mdx
@@ -68,3 +68,7 @@ I have not, in practice, seen ChatGPT hallucinate a _source_ for a response. In 
 Consider the earlier problem of how LLMs have a training cutoff date. That means to be useful for recent events, they need access to data sources that they weren't trained on. Modern LLMs are trained to respect data that they receive, often "grounding" a response in that data. However, they also assume that the data they receive is correct. As many know, not everything written on the web is correct, and it may even be intentionally misleading!
 
 If an end-user of ChatGPT using its search capabilities doesn't think to inspect the underlying sources themselves, then they too will be misled. This may be fine for low stakes use cases, but people don't just use ChatGPT when the stakes are low, and this is a real problem.
+
+## We're just getting started here
+
+In about 3 years we've seen a fun chatbot turn into, much to the chagrin of some, an essential part of information infrastructure for the entire world. They have wholly replaced some systems, including search systems, for many people, and they can often do a better job of it. This is a phenomenal advancement in computing, even though there's clearly so much further to go. I hope that more folks understand the risks involved in using this tech as search engines, so that we can all take the very useful capabilities we now have and use them truly to our advantage instead of our detriment.
