--- a/content/posts/llms-as-search-engines.mdx
+++ b/content/posts/llms-as-search-engines.mdx
@@ -71,4 +71,4 @@ If an end-user of ChatGPT using its search capabilities doesn't think to inspect
 
 ## We're just getting started here
 
-In about 3 years we've seen a fun chatbot turn into, much to the chagrin of some, an essential part of information infrastructure for the entire world. They have wholly replaced some systems, including search systems, for many people, and they can often do a better job of it. This is a phenomenal advancement in computing, even though there's clearly so much further to go. I hope that more folks understand the risks involved in using this tech as search engines, so that we can all take the very useful capabilities we now have and use them truly to our advantage instead of our detriment.
+In about 3 years we've seen a fun chatbot turn into, much to the chagrin of some, an essential piece of information infrastructure for the entire world. They have wholly replaced some systems, including search systems, for many people, and they can often do a better job of it. This is a phenomenal advancement in computing, even though there's clearly so much further to go. I hope that more folks understand the risks involved in using this tech as search engines, so that we can all take the very useful capabilities we now have and use them truly to our advantage instead of our detriment.
