--- a/content/posts/llms-as-search-engines.mdx
+++ b/content/posts/llms-as-search-engines.mdx
@@ -45,7 +45,7 @@ The problem I describe above is precisely the sort of pitfall that OpenAI faced 
 
 To address this, OpenAI has added [search](https://openai.com/index/introducing-chatgpt-search/) to their platform. The way this works is that you can tell it to perform a web search before answering a question, or if you're using it as a replacement for your "new tab search" in a web browser, it will pre-select this option.
 
-Additionally, recent [advanced models](https://openai.com/index/introducing-o3-and-o4-mini/) will perform web searches in their "thinking steps" as they churn through how to respond to a query before giving an answer. This capability is currently on the bleeding edge of research, and I've found that it works well when it works well, but sometimes it goes off the rails a bit.
+Additionally, recent [advanced models](https://openai.com/index/introducing-o3-and-o4-mini/) will perform web searches in their "thinking steps" as they churn through how to respond to a query before giving an answer. This capability is currently on the bleeding edge of research, and I've found that it usually works well, but sometimes it goes off the rails a bit.
 
 Finally, ChatGPT also supports [deep research](https://openai.com/index/introducing-deep-research/), which sends an AI agent off on a comprehensive search of the web, where it will search and scan hundreds (or potentially thousands) of sources on the web prior to giving an answer.
 
