--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -2,6 +2,6 @@
 title: Phillip Carter
 ---
 
-In my day job, I’m a Principal PM at Honeycomb, where I lead our AI efforts. Prior to this, I worked on Honeycomb's telemetry pipeline, OpenTelemetry efforts, and API. I also worked on the .NET team at Microsoft for several years, including 5 years as the PM for the F# programming language and tools.
+In my day job, I’m a PM Director at Salesforce working on their Automations platform. I used to work at Honeycomb, where I led AI efforts. Prior to this, I worked on Honeycomb's telemetry pipeline, OpenTelemetry efforts, and API. I also worked on the .NET team at Microsoft for several years, including 5 years as the PM for the F# programming language and tools.
 
 I’m also a maintainer in the OpenTelemetry project, primarily focusing on the website. I do occasionally send PRs to other parts of the project, though. I will occasionally release updates to some packages I still maintain.
