--- a/content/posts/llms-as-search-engines.mdx
+++ b/content/posts/llms-as-search-engines.mdx
@@ -25,7 +25,7 @@ Moreover, I doubt that the OP — a writer — is intentionally trying to keep u
 
 Additionally, a lot of computer dorks like me tend to be very literal-minded, and we're not always great at understanding the social context of someone's posting. And so a horde of computer dorks decided to rush in and correct her false statements about searching capabilities without actually understanding the point she was trying to make in the first place. This is unproductive and unhelpful and comes off as dismissive of the actual, real points being made by people who have expertise outside of computers.
 
-On the other side of things, the tech dorks often do have a point! And eventuall, yes, it is important to be technically correct about things. People don't have the "better" perspective just because they work in a field that isn't tech, although some of bluesky would have you think otherwise. LLMs represent the introduction of a new kind of computing, and it's going to be disruptive in ways we can't predict. The computer dorks who like this tech for the right reasonsare worth having on your side too.
+On the other side of things, the tech dorks often do have a point! And eventually, yes, it is important to be technically correct about things. People don't have the "better" perspective just because they work in a field that isn't tech, although some of bluesky would have you think otherwise. LLMs represent the introduction of a new kind of computing, and it's going to be disruptive in ways we can't predict. The computer dorks who like this tech for the right reasons are worth having on your side too.
 
 Turns out people are complicated. Let's all be kinder to one another. Okay, moving on.
 
