--- a/content/posts/lifting-weights.mdx
+++ b/content/posts/lifting-weights.mdx
@@ -23,7 +23,9 @@ There's also a positive feedback cycle here:
 
 And the end result is that I simply feel better about myself, body and mind, by living in this feedback loop.
 
-## It's hard and has an infinite progression cirve
+## It's hard and has an infinite progression curve
+
+![A lifter's guide to lower body leverages](/img/leverages.png)
 
 Lifting is highly complex when you break it down. Consider a classic lift like the [Conventional Deadlift](https://en.wikipedia.org/wiki/Deadlift). Among other things, you need to:
 
