--- a/content/posts/lifting-weights.mdx
+++ b/content/posts/lifting-weights.mdx
@@ -31,7 +31,7 @@ Lifting is highly complex when you break it down. Consider a classic lift like t
 
 - Position your feet and angle your toes at the right way for your body shape, which will differ based on arm length, ratio of femur to tibia length, and hip mobility
 - Properly brace your core evenly across your front and sides ([here's 50 pages explaining the concept](https://www.scribd.com/document/492792395/Breathing-and-Bracing-eBook))
-- Execute a proper Hip Hinge to "load" your hips, glutes, and hamstrings without rocking your weight back onto your heels, leaning too far forward, or "de-loading" into your lower back
+- Execute a proper [Hip Hinge](https://www.verywellfit.com/how-to-do-a-hip-hinge-4685934) to "load" your hips, glutes, and hamstrings without rocking your weight back onto your heels, leaning too far forward, or "de-loading" into your lower back
 - Find the right grip width for your body proportions
 - Learn the right grip for your hands (mixed grip, hook grip, purely overhand) or how to use different kinds of straps
 - Once gripping the bar, engage your [lats](https://en.wikipedia.org/wiki/Latissimus_dorsi_muscle) to take the slack out of the bar and start transferring tension into your hips, glutes, hamstrings, and quads
