--- a/content/posts/lame-duck-teams.mdx
+++ b/content/posts/lame-duck-teams.mdx
@@ -22,6 +22,6 @@ These are all strong signs that your team is going to be wound down. Eventually.
 
 See, the thing that's really funny about big tech and these teams is that they go on for a lot longer than they should. In a startup, there isn't enough time to fuck around with 3-5 (or more) people plodding along on work that's already served its purpose. You disassemble and move on because time is your most precious currency. But in bigger tech companies, you have loads of time, or you're just in an org with a stupendous amount of waste and your "wasted money" or whatever is just a drop in the bucket that you're not a priority to disassemble right now.
 
-Granted, this sort of stuff probably also happens in some startups, too. One of the dirtier secrets of startups is that they can also be ridden with politics, bloated orgs, and all the other stuff you'd normally attribute to a big tech company.
+Granted, this sort of stuff probably also happens in some startups, too. One of the dirtier secrets of startups is that they can also be ridden with politics, bloated orgs, and all the other stuff you'd normally attribute to a big tech company. Just on a smaller scale than big tech companies.
 
 Anyways, this is one of the things that startup world hates about big tech, and one example of why people who have ever only worked in big tech get confused about why a bunch of startup people look down on them. But hey, the money's usually good.
