--- a/content/posts/ai-evals-exhausting.mdx
+++ b/content/posts/ai-evals-exhausting.mdx
@@ -16,7 +16,7 @@ In 2023 I was able to compare Claude 1.x with GPT 3.5 and GPT 4 for Observabilit
 
 Now in late 2025 it's a complete mess! It's not just that there's a lot of models -- there are tools to automate model selection with evals -- it's that each time there's a new release, you just can't tell if that newer model is going to meaningfully improve things or not.
 
-Evals are great, but they're fundamentally limited by past observations and your predictions of "realistic use" that you haven't observed yet. For example, chances are that your evals aren't good enough to measure if Gemini 3 is a noticable improvement over GPT 5.1 for your use case. Consider a well-formed eval where you pass ~75-80% of your test cases, and Gemini 3 bumps that up to 80-85%, or even 85-90%. Is that significantly better such that your users, or even yourself, will notice that your tool is just better now? **My guess is you can't tell, and that's because your evals don't accurately capture all of the other ways your tool will get used**.
+Evals are great, but they're fundamentally limited by past observations and your predictions of "realistic use" that you haven't observed yet. For example, chances are that your evals aren't good enough to measure if Gemini 3 is a noticable improvement over GPT 5.1 for your use case. Consider a well-formed eval where you pass ~75-80% of your test cases, and Gemini 3 bumps that up to 80-85%, or even 85-90%. Is that significantly better such that your users, or even yourself, will notice that your tool is just better now? **My guess is you can't tell, and that's because your evals probably don't capture all of the other ways your tool will get used by this better model**.
 
 And so you might have the bright idea of running an A/B test. What if that test shows Gemini 3 as better (and outside the margin of error for measurement), but not _that_ much better? Did the new model actually improve things? I bet your users couldn't tell the difference.
 
