--- a/content/posts/ai-evals-exhausting.mdx
+++ b/content/posts/ai-evals-exhausting.mdx
@@ -7,8 +7,8 @@ tags: ai, llms
 
 It can be exhuasting keeping up with AI improvements. Really it comes down to two reasons:
 
-1. Models are materially improving month over month across several domains and for many different tasks
-2. Industry standard benchmarks are usually meaningless
+1. Models materially improve month over month across several domains and for many different tasks, but not in a way you can predict
+2. Industry standard benchmarks are usually meaningless (but not always!)
 
 I was amongst the earlier folks adopting LLMs towards some productive end since I got a private early access key for GitHub Copilot in 2021. Back then it was simpler to measure improvements because AI coding was the only "real" application you could rely on, and it had one modality with tab completions. Pick a language, pick a codebase, and hit the tab button as you code and you could tell pretty quickly if an update delivered something useful or not.
 
