--- a/content/posts/ai-evals-exhausting.mdx
+++ b/content/posts/ai-evals-exhausting.mdx
@@ -22,6 +22,8 @@ And so you might have the bright idea of running an A/B test. What if that test 
 
 But then here's the kicker: every time there's a new model release, someone eventually notices that the new model just does some stuff way better than anything else. In this case with Gemini, "reasoning about a codebase", image generation, and object recognition in images seem to all of have undergone a noticable leap. Back when Claude Sonnet 3.5 came out, developers all noticed that it was the first LLM that could actually generate code well enough to generate whole files at a time without "losing the plot". It's not like improvements didn't happen  -- previous AI models in the past could generate whole fiels or interpret images -- but with each release comes some uneven improvement that nobody can predict.
 
+Moreover, and this is perhaps the most important part of it all, sometimes a newer model means you can simply do different and more interesting things than could be done before. By definition, you don't have evals you can run against things you haven't built yet. **Evals are great, but they necessarily look backwards, not forwards.**
+
 What's annoying with this is each model release comes with a nice model card showing modest improvements on some industry benchmark and the occaisional leap on one or two benchmarks. This is, for all intents and purposes, benchmark slop that means very little. **Claude Sonnet 3.5 knocked it out of the park on coding benchmarks, but that meant nothing until we all got our hands on it.**
 
 And so what we're left with, for now, is having to creatively evaluate each new major model release. Most of the time, industry benchmarks don't represent our use cases, but our existing evals or ad-hoc test cases _also_ tend not to catch when a model is a lot better. It can be exhausting!
