--- a/content/posts/what-if-ai-isnt-a-bubble.mdx
+++ b/content/posts/what-if-ai-isnt-a-bubble.mdx
@@ -54,7 +54,7 @@ What if any of the above things get good enough, and a deeply racist, misogynist
 
 **What if only one of these things ends up being true?** Increasingly, I believe that one of these things will end up being true. And I don't think we're remotely prepared for that reality because we can't even imagine what society would look like if most programmers don't program, drivers don't drive, teacher don't teach, CSAM and other pornographic abuse infects every inch of the web, police forces can _actually_ automate discrimination with specialized AI systems, and so on.
 
-## Probably not in a year
+## Ten years from now
 
 I don't think an AI revolution or bubble popping—whether either exists or not—will happen overnight.
 
