--- a/content/posts/what-if-ai-isnt-a-bubble.mdx
+++ b/content/posts/what-if-ai-isnt-a-bubble.mdx
@@ -52,7 +52,7 @@ What if drones can automonously operate towards most objectives? What if police 
 
 What if any of the above things get good enough, and a deeply racist, misogynistic, homophic, and so on world leader decides to specialize AI systems towards automated governance along their horrifying political alignment?
 
-**What if only one of these things ends up being true?** Increasingly, I believe that one of these things will end up being true. And I don't think we're remotely prepared for that reality because we can't even imagine what society would look like if most programmers don't program, drivers don't drive, teacher don't teach, CSAM and other pornographic abuse infects every inch of the web, police forces can _actually_ automate discrimination with specialized AI systems, and so on.
+**What if only one of these things ends up being true?** Increasingly, I believe that one of them will. And I don't think we're remotely prepared for that reality because we can't even imagine what society would look like if most programmers don't program, drivers don't drive, teacher don't teach, CSAM and other pornographic abuse infects every inch of the web, police forces can _actually_ automate discrimination with specialized AI systems, and so on.
 
 ## Ten years from now
 
